# frazodrom

./: .gitignore  AGENTS.md  BLOCKERS.md  CLAUDE.md  LICENSE  MEMORY.md  PLAN.md  README.md  manual_testing.md
.github/workflows/: ci.yml
app/: README.md  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite-plugin-static-copy.d.ts  vite.config.ts
app/e2e/: accessibility.spec.ts  ai-routing.spec.ts  critical-flow.spec.ts  first-sentence.spec.ts  fixtures.ts  free-talk.spec.ts  layout.spec.ts  persistence.spec.ts  smoke.spec.ts  visual.spec.ts
app/src/: App.tsx  index.css  main.tsx
app/src/checker/: britishAmerican.ts  cascade.test.ts  cascade.ts  contractions.ts  editDistance.ts  normalize.ts  numberWords.ts  topWords.json  wordDiff.test.ts  wordDiff.ts
app/src/components/: AudioButton.tsx  DataBackup.tsx  KokoroPromptBanner.tsx  ModelChip.tsx  NavBar.tsx  PromptEditor.tsx  SpeakingPractice.tsx  Toast.tsx  TutorChat.tsx  TutorPanel.tsx
packs/: a1_be_affirm.json  a1_be_neg_quest.json  a1_do_questions.json  a1_does_questions.json  a1_dont_doesnt.json  a1_freq_adverbs.json  a1_pres_simple_3rd.json  a1_pres_simple_i.json  a1_pronouns_poss.json  a1_there_is.json  a1_this_that.json  index.json
pipeline/: .env.example  README.md  pyproject.toml
pipeline/scripts/: export_top_words.py
pipeline/src/etr/: clean.py  cli.py  curate.py  emit.py  enrich.py  fetch.py  gapfill.py  level.py  llm.py  rules.py  tag.py  validate.py
pipeline/tests/: test_cli.py  test_llm.py  test_rules.py
proxy/: .env.example  serve.mjs
(+114 files in other folders)
